# CMake_tutorial

./: .gitignore  CMakeLists.txt  TutorialConfig.h.in  tutorial.cpp
mylib/: CMakeLists.txt  math.cpp  mysqrt.cpp
